updated verbiage for layout use case

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -77,8 +77,8 @@ alloy-selectoneradio-immediate=Use of the [vdldoc:alloy:selectOneRadio:immediate
 alloy-selectoneradio-immediate-example-1=When *immediate='false'*, the [vdldoc:alloy:selectOneRadio:valueChangeListener] fires later in the JSF Lifecycle.  This is the default behavior.  So, when do you think it will fire?
 alloy-selectoneradio-immediate-example-2=When *immediate='true'*, the [vdldoc:alloy:selectOneRadio:valueChangeListener] fires earlier in the JSF Lifecycle.  So, when do you think it will fire?
 alloy-selectoneradio-layout=There are two options when using the [vdldoc:alloy:selectOneRadio:layout] attribute:
-alloy-selectoneradio-layout-example-1=The default option, 'lineDirection', which renders the radio buttons horizontally.
-alloy-selectoneradio-layout-example-2='pageDirection', which renders the radio buttons vertically.
+alloy-selectoneradio-layout-example-1=The default option, *lineDirection*, which renders the radio buttons horizontally.
+alloy-selectoneradio-layout-example-2=*pageDirection*, which renders the radio buttons vertically.
 alloy-selectstarrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 alloy-selectstarrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
 alloy-selectstarrating-default-value=A *default value* can be specified using one of two ways:
