--- a/demos/showcase/showcase-webapp/pom.xml
+++ b/demos/showcase/showcase-webapp/pom.xml
@@ -17,14 +17,9 @@
 			<id>prettyfaces</id>
 			<dependencies>
 				<dependency>
-				    <groupId>org.ocpsoft.rewrite</groupId>
-				    <artifactId>rewrite-servlet</artifactId>
-				    <version>2.0.11.Final</version>
-				</dependency>
-				<dependency>
-				    <groupId>org.ocpsoft.rewrite</groupId>
-				    <artifactId>rewrite-config-prettyfaces</artifactId>
-				    <version>2.0.11.Final</version>
+					<groupId>com.ocpsoft</groupId>
+					<artifactId>prettyfaces-jsf2</artifactId>
+					<version>${prettyfaces.version}</version>
 				</dependency>
 			</dependencies>
 		</profile>
