FACES-1915 Develop alloy:selectOneRadio, alloy:selectStarRating, and alloy:selectThumbRating component tags FACES-1714 Develop Liferay Faces Showcase (alloy:selectOneRadio, alloy:selectStarRating, and alloy:selectThumbRating)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -47,14 +47,10 @@ alloy-inputsourcecode=[javadoc:com.liferay.faces.alloy.component.aceeditor.Input
 alloy-inputsourcecode-default-value=A *default value* can specified using when the [vdldoc:alloy:inputSourceCode:value] attribute is bound via EL to a model bean property. In the example below, the default value of the `sourceText` property is set inside of the `InputSourceCodeModelBean.getSourceText()` method.
 alloy-inputsourcecode-general=The component supports *color-coded text* for various programming languages via the [vdldoc:alloy:inputSourceCode:mode] attribute.
 alloy-inputtextarea=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTextarea] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *multi-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputTextarea], it supports all the features of [vdldoc:h:inputTextarea].
-alloy-inputtextarea-conversion=The [vdldoc:alloy:inputTextarea:value] attribute can be *converted* via the [vdldoc:alloy:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:converterMessage] attribute.
-alloy-inputtextarea-conversion-example-1=Conversion to an [javadoc:java.lang.Integer] via the [vdldoc:alloy:inputTextarea:converter] attribute.
-alloy-inputtextarea-conversion-example-2=Conversion to an [javadoc:java.lang.Integer] by specifying an [vdldoc:f:converter] child tag.
+alloy-inputtextarea-conversion=The [vdldoc:alloy:inputTextarea:value] attribute can be *converted* via the [vdldoc:alloy:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:converterMessage] attribute.
 alloy-inputtextarea-general=The [vdldoc:alloy:inputTextarea:value] attribute can be *bound to a model bean property* via EL.
 alloy-inputtextarea-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:alloy:inputTextarea:dir] and [vdldoc:alloy:inputTextarea:lang] attributes.
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
-alloy-inputtextarea-validation-example-1=Validating an *email address* via the [vdldoc:alloy:inputTextarea:validator] attribute.
-alloy-inputtextarea-validation-example-2=Validating an *email address* via specifying an [vdldoc:f:validateRegex] child tag.
 alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea].
 alloy-outputremainingchars-general=The [vdldoc:alloy:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
 alloy-outputremainingchars-general-example-1=Associate with an [vdldoc:h:inputText] and specify a `{0}` token within the [vdldoc:alloy:outputRemainingChars:value] attribute.
@@ -65,29 +61,41 @@ alloy-outputremainingchars-max-length-reached-1=The [vdldoc:alloy:outputRemainin
 alloy-outputremainingchars-max-length-reached-2=The [vdldoc:alloy:outputRemainingChars:onceMaxlengthReached] event occurs *the first time* maxlength is reached.
 alloy-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputText] is a [javadoc:javax.faces.component.UIOutput] component that renders its own value as text. Since it extends [javadoc:javax.faces.component.html.HtmlOutputText], it supports all the features of [vdldoc:h:outputText].
 alloy-outputtext-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
-alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
+alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] type of child tag.
 alloy-outputtext-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:alloy:outputText:dir] and [vdldoc:alloy:outputText:lang] attributes.
-alloy-starrating=[javadoc:com.liferay.faces.alloy.component.starrating.StarRating] is a [javadoc:javax.faces.component.UIInput] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
-alloy-starrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
-alloy-starrating-default-value=A *default value* can be specified using one of two ways:
-alloy-starrating-default-value-example-1=Initializing the default value in the model bean.
-alloy-starrating-default-value-example-2=Setting the [vdldoc:alloy:starRating:defaultSelected] attribute.
-alloy-starrating-general=There are two basic ways to *bind* the [vdldoc:alloy:starRating:value] attribute of this component to a model bean property:
-alloy-starrating-general-example-1=String value (no converter required)
-alloy-starrating-general-example-2=Object value (requires a converter)
-alloy-starrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+alloy-selectoneradio=[javadoc:com.liferay.faces.alloy.component.selectoneradio.SelectOneRadio] is a [javadoc:javax.faces.component.UISelectOne] component that renders radio buttons. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it supports all the features of [vdldoc:h:selectOneRadio] such as accepting [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
+alloy-selectoneradio-conversion=The [vdldoc:alloy:selectOneRadio:value] attribute can be *converted* by specifying an [vdldoc:f:converter] child tag.
+alloy-selectoneradio-data-model=The component will display *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
+alloy-selectoneradio-default-value=A *default value* can specified using when the [vdldoc:alloy:selectOneRadio:value] attribute is bound via EL to a model bean property.
+alloy-selectoneradio-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
+alloy-selectoneradio-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+alloy-selectoneradio-immediate=When the [vdldoc:alloy:selectOneRadio:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
+alloy-selectoneradio-immediate-example-1=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `false` (the default)
+alloy-selectoneradio-immediate-example-2=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `true`
+alloy-selectoneradio-vertical-layout=Setting the value of the [vdldoc:alloy:selectOneRadio:layout] attribute to `pageDirection` will cause the component to render with a *vertical layout*.
+alloy-selectstarrating=[javadoc:com.liferay.faces.alloy.component.selectstarrating.SelectStarRating] is a [javadoc:javax.faces.component.UISelectOne] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
+alloy-selectstarrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
+alloy-selectstarrating-default-value=A *default value* can be specified using one of two ways:
+alloy-selectstarrating-default-value-example-1=Initializing the default value in the model bean.
+alloy-selectstarrating-default-value-example-2=Setting the [vdldoc:alloy:starRating:defaultSelected] attribute.
+alloy-selectstarrating-general=There are two basic ways to *bind* the [vdldoc:alloy:starRating:value] attribute this component to a model bean property:
+alloy-selectstarrating-general-example-1=String value (no converter required)
+alloy-selectstarrating-general-example-2=Object value (requires a converter)
+alloy-selectstarrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
+alloy-selectthumbrating=[javadoc:com.liferay.faces.alloy.component.selectthumbrating.SelectThumbRating] is a [javadoc:javax.faces.component.UISelectOne] component that renders a pair of thumb icons that a user can select to indicate their favor. The user can click on a thumb to select their favor and click on the same thumb a second time to de-select their favor. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.
+alloy-selectthumbrating-general=The [vdldoc:alloy:thumbRating:value] of the component is typically of type [javadoc:java.lang.Boolean].
+alloy-selectthumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 alloy-tabview=[javadoc:com.liferay.faces.alloy.component.TabView] is a [javadoc:javax.faces.component.UIData] (iterator) component that renders tabs either statically or dynamically.
 alloy-tabview-general=Tabs can be specified *statically* with [vdldoc:alloy:tab] child tags.
 alloy-tabview-data-model=Since it extends [javadoc:javax.faces.component.UIData], it can render tabs *dynamically* when the [vdldoc:alloy:tabView:value] attribute is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:alloy:tabView:var] attribute can be used to introduce a variable name into the EL when iterating over the model.
-alloy-thumbrating=[javadoc:com.liferay.faces.alloy.component.ThumbRating] is a [javadoc:javax.faces.component.UIInput] component that renders a pair of thumb icons that a user can select to indicate their favor. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as children.
-alloy-thumbrating-general=The [vdldoc:alloy:thumbRating:value] of the component must be of type [javadoc:java.lang.Boolean].
-alloy-thumbrating-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 back-to-navigation-with=Back to Navigation with
 bridge-inputfile=[javadoc:com.liferay.faces.bridge.component.HtmlInputFile] is a [javadoc:javax.faces.component.UIInput] component that renders an HTML *&lt;input type="file" /&gt;* element. The component requires the [vdldoc:h:form:enctype] attribute of the encosing [vdldoc:h:form] tag to be *"multipart/form-data"* and only works in a full-page (non-Ajax) postback.
-bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads.  
+bridge-inputfile-general=The HTML5 [vdldoc:bridge:inputFile:multiple] attribute can be set to *"multiple"* in order to support multi-file uploads. 
 block=Block
 component=Component
 conversion=Conversion
+conversion-to-a-date-using-converter-attribute=Conversion to a [javadoc:java.util.Date] using the [vdldoc:alloy:inputTextarea:converter] attribute
+conversion-to-a-date-using-f-convertdatetime=Conversion to a [javadoc:java.util.Date] using an [vdldoc:f:convertDateTime] child tag
 converter-message=Failed to convert this field
 danger=Danger
 data-model=Data Model
@@ -97,12 +105,10 @@ default=Default
 default-value=Default Value
 dislike=Dislike
 example=Example
-example-1=Example #1
-example-2=Example #2
-example-3=Example #3
-favorite=Favorite
+favorite-liferay-benefit=Favorite Liferay Benefit
 hyperlink-targeting-the-showcase-portlet=Hyperlink targeting the Showcase portlet
 general=General
+immediate=Immediate
 info=Info
 instant-ajax=Instant Ajax
 inverse=Inverse
@@ -133,6 +139,7 @@ portlet-renderurl-general=Specify [vdldoc:portlet:param] as a child tag in order
 portlet-resourceurl=[javadoc:com.liferay.faces.bridge.component.PortletResourceURL] is a [javadoc:javax.faces.component.UIOutput] component that provides the ability to get a [javadoc:javax.portlet.ResourceURL] that invokes the RESOURCE_PHASE of the portlet lifecycle targeting the current portlet. 
 portlet-resourceurl-general=Specify [vdldoc:portlet:param] as a child tag in order to add portlet resource parameters to the URL. The example below shows how to specify the *javax.faces.resource* and *ln* portlet *resource parameters* in order to get a URL that targets a JSF *image* resource.
 primary=Primary
+rating=Rating
 rendered=Rendered
 required=Required
 required-message=This is a required field
@@ -146,10 +153,14 @@ success=Success
 to-param-page=To Param page
 usage=Usage
 valid-date-range=Valid Date Range
+validating-an-email-address-using-validator-attribute=Validating an *email address* using the [vdldoc:alloy:inputTextarea:validator] attribute
+validating-an-email-address-using-f-validateregex=Validating an *email address* using an [vdldoc:f:validateRegex] child tag
 validation=Validation
 validator-message=Invalid E-Mail Address
 value-attribute=Value Attribute
 value-of-foo-param=Value of foo Param
 various-styles=Various Styles
 vdl-documentation=VDL Documentation
+vertical-layout=Vertical Layout
 warning=Warning
+when-was-the-us-declaration-of-independence-signed=When was the US Declaration of Independence signed?
