FACES-1714 Develop Liferay Faces Showcase (added use additional cases for alloy:inputTextarea and first set of use-cases for alloy:inputText)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -46,10 +46,19 @@ alloy-inputdate-multiple-panes=The number of month *panes* that are displayed ca
 alloy-inputsourcecode=[javadoc:com.liferay.faces.alloy.component.aceeditor.InputSourceCode] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing source code text.
 alloy-inputsourcecode-default-value=A *default value* can specified using when the [vdldoc:alloy:inputSourceCode:value] attribute is bound via EL to a model bean property. In the example below, the default value of the `sourceText` property is set inside of the `InputSourceCodeModelBean.getSourceText()` method.
 alloy-inputsourcecode-general=The component supports *color-coded text* for various programming languages via the [vdldoc:alloy:inputSourceCode:mode] attribute.
+alloy-inputtext=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputText] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *single-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputText], it supports all the features of [vdldoc:h:inputText].
+alloy-inputtext-conversion=The [vdldoc:alloy:inputText:value] attribute can be *converted* via the [vdldoc:alloy:inputText:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:converterMessage] attribute.
+alloy-inputtext-general=The [vdldoc:alloy:inputText:value] attribute can be *bound to a model bean property* via EL.
+alloy-inputtext-immediate=When the [vdldoc:alloy:inputText:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
+alloy-inputtext-validation=The [vdldoc:alloy:inputText:value] attribute can be *validated* via the [vdldoc:alloy:inputText:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputText:validatorMessage] attribute.
 alloy-inputtextarea=[javadoc:com.liferay.faces.alloy.component.inputtextarea.InputTextarea] is a [javadoc:javax.faces.component.UIInput] component that renders a field for editing *multi-line text*. Since it extends [javadoc:javax.faces.component.html.HtmlInputTextarea], it supports all the features of [vdldoc:h:inputTextarea].
 alloy-inputtextarea-conversion=The [vdldoc:alloy:inputTextarea:value] attribute can be *converted* via the [vdldoc:alloy:inputTextarea:converter] attribute or by specifying an [vdldoc:f:converter] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:converterMessage] attribute.
 alloy-inputtextarea-general=The [vdldoc:alloy:inputTextarea:value] attribute can be *bound to a model bean property* via EL.
+alloy-inputtextarea-immediate=When the [vdldoc:alloy:inputTextarea:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
 alloy-inputtextarea-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:alloy:inputTextarea:dir] and [vdldoc:alloy:inputTextarea:lang] attributes.
+alloy-inputtextarea-size=The *size* of the rendered textarea can be specified via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes, or via CSS using the [vdldoc:alloy:inputTextarea:styleClass] or [vdldoc:alloy:inputTextarea:style] attributes.
+alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
+alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
 alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea].
 alloy-outputremainingchars-general=The [vdldoc:alloy:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
@@ -70,8 +79,6 @@ alloy-selectoneradio-default-value=A *default value* can specified using when th
 alloy-selectoneradio-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
 alloy-selectoneradio-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child tag.
 alloy-selectoneradio-immediate=When the [vdldoc:alloy:selectOneRadio:immediate] attribute is `true`, the submitted value is converted and validated during *APPLY_REQUEST_VALUES* phase of the JSF lifecycle, rather than the normal PROCESS_VALIDATIONS phase.
-alloy-selectoneradio-immediate-example-1=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `false` (the default)
-alloy-selectoneradio-immediate-example-2=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `true`
 alloy-selectoneradio-vertical-layout=Setting the value of the [vdldoc:alloy:selectOneRadio:layout] attribute to `pageDirection` will cause the component to render with a *vertical layout*.
 alloy-selectstarrating=[javadoc:com.liferay.faces.alloy.component.selectstarrating.SelectStarRating] is a [javadoc:javax.faces.component.UISelectOne] component that renders a set of stars. The user can click on a star to select a rating and click on the same star a second time to de-select a rating. Since it extends [javadoc:javax.faces.component.html.HtmlSelectOneRadio], it accepts [vdldoc:f:selectItem] or [vdldoc:f:selectItems] as child tags.
 alloy-selectstarrating-data-model=The component can display stars *dynamically* when the [vdldoc:f:selectItems:value] attribute of the child [vdldoc:f:selectItems] tag is bound via EL to a model bean property (which is wrapped implicitly by JSF with a [javadoc:javax.faces.model.DataModel]). The [vdldoc:f:selectItems:var] attribute of the child [vdldoc:f:selectItems] tag is used to introduce a variable name into the EL when iterating over the model.
@@ -144,6 +151,7 @@ rendered=Rendered
 required=Required
 required-message=This is a required field
 right-to-left=Right-To-Left
+size=Size
 small=Small
 source-code=Source Code
 sticky-multiple-selection=Sticky Multiple Selection
@@ -159,6 +167,8 @@ validation=Validation
 validator-message=Invalid E-Mail Address
 value-attribute=Value Attribute
 value-of-foo-param=Value of foo Param
+valuechangelistener-execution-when-immediate-is-false=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `false` (the default)
+valuechangelistener-execution-when-immediate-is-true=ValueChangeListener execution when [vdldoc:alloy:selectOneRadio:immediate] is `true`
 various-styles=Various Styles
 vdl-documentation=VDL Documentation
 vertical-layout=Vertical Layout
