FACES-1714 Develop Liferay Faces Showcase (use alloy:inputText instead of h:inputText)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -18,7 +18,7 @@ alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-datepicker=[javadoc:com.liferay.faces.alloy.component.datepicker.DatePicker] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
 alloy-datepicker-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:datePicker:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
-alloy-datepicker-general=The component can be attached to an [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] via the [vdldoc:alloy:datePicker:for] attribute.
+alloy-datepicker-general=The component can be attached to an [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] via the [vdldoc:alloy:datePicker:for] attribute.
 alloy-datepicker-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child of the input tag.
 alloy-datepicker-localization=A *custom locale* can be specified via the [vdldoc:alloy:datePicker:locale] attribute.
 alloy-datepicker-localization-example-1=Hard coded Brazilian Portuguese locale
@@ -60,11 +60,11 @@ alloy-inputtextarea-size=The *size* of the rendered textarea can be specified vi
 alloy-inputtextarea-size-example-1=Setting the size via the [vdldoc:alloy:inputTextarea:rows] and [vdldoc:alloy:inputTextarea:cols] attributes
 alloy-inputtextarea-size-example-2=Setting the size via the [vdldoc:alloy:inputTextarea:style] attribute
 alloy-inputtextarea-validation=The [vdldoc:alloy:inputTextarea:value] attribute can be *validated* via the [vdldoc:alloy:inputTextarea:validator] attribute or by specifying an [vdldoc:f:validator] type of child tag. In addition, custom user feedback can be specified via the [vdldoc:alloy:inputTextarea:validatorMessage] attribute.
-alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea].
+alloy-outputremainingchars=[javadoc:com.liferay.faces.alloy.component.outputremainingchars.OutputRemainingChars] is a [javadoc:javax.faces.component.UIOutput] component that displays the number of characters remaining for an associated [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea].
 alloy-outputremainingchars-general=The [vdldoc:alloy:outputRemainingChars:value] attribute can contain text with a `{0}` token that is substituted with the number of remaining characters. If the `value` attribute is not specified, then only the number of remaining characters are rendered.
-alloy-outputremainingchars-general-example-1=Associate with an [vdldoc:h:inputText] and specify a `{0}` token within the [vdldoc:alloy:outputRemainingChars:value] attribute.
-alloy-outputremainingchars-general-example-2=Associate with an [vdldoc:h:inputTextarea] and simply render the number of remaining characters.
-alloy-outputremainingchars-default-value=When a *default value* of an associated [vdldoc:h:inputText] or [vdldoc:h:inputTextarea] is specified, the number of remaining characters will be calculated before rendering.
+alloy-outputremainingchars-general-example-1=Associate with an [vdldoc:alloy:inputText] and specify a `{0}` token within the [vdldoc:alloy:outputRemainingChars:value] attribute.
+alloy-outputremainingchars-general-example-2=Associate with an [vdldoc:alloy:inputTextarea] and simply render the number of remaining characters.
+alloy-outputremainingchars-default-value=When a *default value* of an associated [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] is specified, the number of remaining characters will be calculated before rendering.
 alloy-outputremainingchars-max-length-events=There are two attributes to use for events:
 alloy-outputremainingchars-max-length-reached-1=The [vdldoc:alloy:outputRemainingChars:onMaxlengthReached] event occurs *every time* maxlength is reached.
 alloy-outputremainingchars-max-length-reached-2=The [vdldoc:alloy:outputRemainingChars:onceMaxlengthReached] event occurs *the first time* maxlength is reached.
