--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -1,6 +1,6 @@
 are-you-sure-you-want-to-delete-this=Are you sure you want to delete this?
 alloy-button=[javadoc:com.liferay.faces.alloy.component.button.Button] is a [javadoc:javax.faces.component.UIOutput] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:button:type] is `button`. Since it extends [javadoc:javax.faces.component.html.HtmlOutcomeTargetButton], it supports all the features of [vdldoc:h:button]. The component does *not need to be a child* of `h:form` since the [vdldoc:alloy:button:outcome] attribute is designed to navigate via HTTP GET.
-alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:h:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:button:image] and [vdldoc:alloy:button:value] attributes can be specified for styling purposes.
+alloy-button-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:button:image] and [vdldoc:alloy:button:value] attributes can be specified for styling purposes.
 alloy-button-general-example-1=Styling via children
 alloy-button-general-example-2=Styling via [vdldoc:alloy:button:image] attribute
 alloy-button-general-example-3=Styling via [vdldoc:alloy:button:value] attribute
@@ -8,7 +8,7 @@ alloy-button-navigation=The component can be used to *navigate* between pages wi
 alloy-button-param=URL *parameters* can be specified via [vdldoc:f:param] child tags. Setting [vdldoc:alloy:button:includeViewParams] to `true` will automatically include all of the [vdldoc:f:viewParam] tags (view parameters) as URL parameters.
 alloy-button-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-commandbutton=[javadoc:com.liferay.faces.alloy.component.commandbutton.CommandButton] is a [javadoc:javax.faces.component.UICommand] component that renders a styleable HTML `&lt;button&gt;` element. The default [vdldoc:alloy:commandButton:type] is `submit`. Since it extends [javadoc:javax.faces.component.html.HtmlCommandButton], it supports all the features of [vdldoc:h:commandButton]. The component *must be a child* of [vdldoc:h:form] in order to trigger the [vdldoc:alloy:commandButton:action] or [vdldoc:alloy:commandButton:actionListener].
-alloy-commandbutton-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:h:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:commandButton:image] and [vdldoc:alloy:commandButton:value] attributes can be specified for styling purposes.
+alloy-commandbutton-general=*Children* such as [vdldoc:alloy:icon], [vdldoc:alloy:outputText], and [vdldoc:h:graphicImage] can be specified for styling purposes. Alternatively, the [vdldoc:alloy:commandButton:image] and [vdldoc:alloy:commandButton:value] attributes can be specified for styling purposes.
 alloy-commandbutton-general-example-1=Styling via children
 alloy-commandbutton-general-example-2=Styling via [vdldoc:alloy:commandbutton:image] attribute
 alloy-commandbutton-general-example-3=Styling via [vdldoc:alloy:commandbutton:value] attribute
