FACES-1895 Develop alloy:pickDate component (renamed alloy:datePicker to alloy:pickDate)

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -16,18 +16,18 @@ alloy-commandbutton-navigation=The component can be used to *navigate* between p
 alloy-commandbutton-param=URL *parameters* can be specified via the [vdldoc:alloy:commandbutton:action] attribute. By specifying a `faces-redirect=true` parameter in the action attribute, it will utilize the POST/REDIRECT/GET pattern.
 alloy-commandbutton-value-attribute=Although the component&apos;s [vdldoc:alloy:commandButton:value] attribute is *read-only* (can&apos;t be changed via form submission), it can be used to determine that an item has been selected by the user.
 alloy-commandbutton-various-styles=The component can be *styled* with Bootstrap class names as described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#buttons" target="_blank">Alloy Base CSS</a> documentation.
-alloy-datepicker=[javadoc:com.liferay.faces.alloy.component.datepicker.DatePicker] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
-alloy-datepicker-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:datePicker:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
-alloy-datepicker-general=The component can be attached to an [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] via the [vdldoc:alloy:datePicker:for] attribute.
-alloy-datepicker-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child of the input tag.
-alloy-datepicker-localization=A *custom locale* can be specified via the [vdldoc:alloy:datePicker:locale] attribute.
-alloy-datepicker-localization-example-1=Hard coded Brazilian Portuguese locale
-alloy-datepicker-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
-alloy-datepicker-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:datePicker:minimumDate] and [vdldoc:alloy:datePicker:maximumDate] attributes.
-alloy-datepicker-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:datePicker:panes] attribute (maximum of 3).
-alloy-datepicker-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:datePicker:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:alloy:datePicker:dateSeparator] attribute.
-alloy-datepicker-multiple-selection-example-1=Hold down shift or control to select multiple dates
-alloy-datepicker-multiple-selection-example-2=Pop up the datePicker multiple times to select multiple dates
+alloy-pickdate=[javadoc:com.liferay.faces.alloy.component.pickdate.PickDate] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
+alloy-pickdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:pickDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
+alloy-pickdate-general=The component can be attached to an [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] via the [vdldoc:alloy:pickDate:for] attribute.
+alloy-pickdate-instant-ajax=The component supports *instant Ajax* by simply adding [vdldoc:f:ajax] as a child of the input tag.
+alloy-pickdate-localization=A *custom locale* can be specified via the [vdldoc:alloy:pickDate:locale] attribute.
+alloy-pickdate-localization-example-1=Hard coded Brazilian Portuguese locale
+alloy-pickdate-localization-example-2=Japanese [javadoc:java.util.Locale] obtained from a bean via EL
+alloy-pickdate-min-max-date=*Minimum and maximum dates* can be specified via the [vdldoc:alloy:pickDate:minimumDate] and [vdldoc:alloy:pickDate:maximumDate] attributes.
+alloy-pickdate-multiple-panes=The number of month *panes* that are displayed can be specified via the [vdldoc:alloy:pickDate:panes] attribute (maximum of 3).
+alloy-pickdate-multiple-selection=The *date selection mode* can be specified via the [vdldoc:alloy:pickDate:selectionMode] attribute. Valid values include "single" (the default), "multiple," or "multiple-sticky." The character(s) separating the selected dates can be specified via the [vdldoc:alloy:pickDate:dateSeparator] attribute.
+alloy-pickdate-multiple-selection-example-1=Hold down shift or control to select multiple dates
+alloy-pickdate-multiple-selection-example-2=Pop up the pickDate multiple times to select multiple dates
 alloy-icon=[javadoc:com.liferay.faces.alloy.component.icon.Icon] is a [javadoc:javax.faces.component.UIComponent] that renders a span which contains an icon specified by the [vdldoc:alloy:icon:name] attribute.
 alloy-icon-general=The component displays an *icon* specified by the [vdldoc:alloy:icon:name] attribute. Names are described in the <a href="http://liferay.github.io/alloy-bootstrap/base-css.html#icons" target="_blank">Alloy Base CSS</a> documentation.
 alloy-input-date-benefits-description=since it combines date selection and text input in a single component.
