FACES-1932 Develop alloy:panelGroup component

--- a/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
+++ b/demos/showcase/showcase-webapp/src/main/resources/i18n.properties
@@ -60,6 +60,10 @@ alloy-outputtext=[javadoc:com.liferay.faces.alloy.component.outputtext.OutputTex
 alloy-outputtext-general=The [vdldoc:alloy:outputText:value] attribute can be *bound* to a model bean property via EL.
 alloy-outputtext-conversion=The [vdldoc:alloy:outputText:value] attribute can be *converted* by specifying an [vdldoc:f:converter] type of child tag.
 alloy-outputtext-right-to-left=The component supports *Right-To-Left* language input by setting the [vdldoc:alloy:outputText:dir] and [vdldoc:alloy:outputText:lang] attributes.
+alloy-panelgroup=[javadoc:com.liferay.faces.alloy.component.panelgroup.PanelGroup] is a [javadoc:javax.faces.component.UIPanel] component that renders a `&lt;span&gt;` or a `&lt;div&gt;` element for grouping purposes. Since it extends [javadoc:javax.faces.component.html.HtmlPanelGroup], it supports all the features of [vdldoc:h:panelGroup].
+alloy-panelgroup-general=The [vdldoc:alloy:panelGroup:layout] attribute specifies whether the component renders a `span` or a `div`.
+alloy-panelgroup-general-example-1=By default, the component renders a `span`.
+alloy-panelgroup-general-example-2=Specifying `block` for the [vdldoc:alloy:panelGroup:layout] attribute causes the component to render a `div`.
 alloy-pickdate=[javadoc:com.liferay.faces.alloy.component.pickdate.PickDate] is a [javadoc:javax.faces.component.UIPanel] component that renders a popup a calendar with selectable dates.
 alloy-pickdate-date-pattern=A *custom pattern* can be specified via the [vdldoc:alloy:pickDate:datePattern] attribute. The syntax of the date pattern follows the format specified by [javadoc:java.text.SimpleDateFormat].
 alloy-pickdate-general=The component can be attached to an [vdldoc:alloy:inputText] or [vdldoc:alloy:inputTextarea] via the [vdldoc:alloy:pickDate:for] attribute.
@@ -158,6 +162,8 @@ sticky-multiple-selection=Sticky Multiple Selection
 submit=Submit
 submit-non-faces-postback=Submit Non-Faces Postback
 success=Success
+this-text-is-inside-a-span-html-tag=This text is inside a <span> HTML tag
+this-text-is-inside-a-div-html-tag=This text is inside a <div> HTML tag
 to-param-page=To Param page
 usage=Usage
 valid-date-range=Valid Date Range
